# cldd

./: .gitignore  .gitmodules  .travis.yml  COPYING  ChangeLog  Makefile.am  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  cldd-core-0.1.pc.in  common.am  configure.ac  doxygen.cfg
data/: Makefile.am
data/conf/: Makefile.am  cldd.xml
data/units/: cldd.service.in  cldd_ro.socket.in  cldd_rw.socket.in
m4/: cc_check_cflag.m4  cld_check_cflag.m4  cldd.m4
scripts/: cldd.rc.d
src/: Makefile.am  adt.c  adt.h  cldd.h  cldd.vala  cldd_error.h  client.c  client.h  cmdline.c  cmdline.h  common.h  conf.c  conf.h  config.vala  daemon.c  daemon.h  daemon.vala  daq.c  daq.h  error.c  error.h  log.c  log.h  main.c  main.h  server.c  server.h  settings.vala  stream.c  stream.h  utils.c  utils.h
src/cldd/: Makefile.am  cldd-daemon.vala  cldd-main.vala  cldd-settings.vala
src/libcldd/: Makefile.am
src/libcldd-core/: Makefile.am  cldd-client.vala  cldd-config.vapi  cldd-core-0.1.deps  cldd-empty.vala  filelist.am
src/plugins/: Makefile.am
src/plugins/arduino/: Makefile.am  arduino.plugin.in
tests/: Makefile.am  test-llist.c  test-queue.c  test-rt.c
vapi/: config.vapi
